--- a/index.html
+++ b/index.html
@@ -7,6 +7,37 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-
+    <h1>Programming Language Suggester</h1>
+    <p><em>This quick survey will help you decide on a programming language to learn based on your interests within the field.</em></p>
+    <br>
+    <p>Please answer the questions in the following form to help provide you some helpful suggestions</p>
+    <form>
+      <h5>Question 1</h5>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-1" value="option1" checked>
+        <label class="form-check-label" for="radios1-1">
+          Answer 1-1
+        </label>
+      </div>
+      <div class="form-check">
+      <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-2" value="option2">
+      <label class="form-check-label" for="radios1-2">
+        Answer 1-2
+      </label>
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-3" value="option3">
+        <label class="form-check-label" for="radios1-3">
+          Answer 1-3
+        </label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-4" value="option4">
+          <label class="form-check-label" for="radios1-4">
+            Answer 1-4
+          </label>
+        </div>
+    </form>
+    <br>
   </body>
 </html>
