add form to js, stop reload

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         </label>
       </div>
       <br>
+      <button type="submit">Submit to See Results</button>
     </form>
   </body>
 </html>
