establish results screens and hide them

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="EN-us">
   <head>
     <title>CS Language Learning Decision Tree</title>
-    <link href="css/styles.css" rel="stylesheet" type="teext/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/scripts.js"></script>
   </head>
   <body>
@@ -144,5 +144,25 @@
       <br>
       <button type="submit">Submit to See Results</button>
     </form>
+    <div class="hidden" id="python">
+      <h3>Check out Python!</h3>
+      <p>General Info</p>
+      <!-- an Image -->
+    </div>
+    <div class="hidden" id="javascript">
+      <h3>Check out Javascript!</h3>
+      <p>General Info</p>
+      <!-- an Image -->
+    </div>
+    <div class="hidden" id="cPlusPlus">
+      <h3>Check out C++!</h3>
+      <p>General Info</p>
+      <!-- an Image -->
+    </div>
+    <div class="hidden" id="Ruby">
+      <h3>Check out Ruby!</h3>
+      <p>General Info</p>
+      <!-- an Image -->
+    </div>
   </body>
 </html>
