hide previous results before displaying new

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       <p>General Info</p>
       <!-- an Image -->
     </div>
-    <div class="hidden" id="Ruby">
+    <div class="hidden" id="ruby">
       <h3>Check out Ruby!</h3>
       <p>General Info</p>
       <!-- an Image -->
