--- a/index.html
+++ b/index.html
@@ -7,162 +7,172 @@
     <script src="js/scripts.js"></script>
   </head>
   <body>
-    <h1>Programming Language Suggester</h1>
-    <p><em>This quick survey will help you decide on a programming language to learn based on your interests within the field.</em></p>
-    <br>
-    <p>Please answer the questions in the following form to help provide you some helpful suggestions</p>
-    <form>
-      <h5>Question 1</h5>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-1" value="option1-1" checked>
-        <label class="form-check-label" for="radios1-1">
-          Answer 1-1
-        </label>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Programming Language Suggester</h1>
+        <p><em>This quick survey will help you decide on a programming language to learn based on your interests within the field.</em></p>
+        <br>
+        <p>Please answer the questions in the following form to help provide you some helpful suggestions</p>
       </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-2" value="option1-2">
-        <label class="form-check-label" for="radios1-2">
-          Answer 1-2
-        </label>
+      <div class="row">
+        <div class="col-md-8">
+          <form>
+            <h5>Question 1</h5>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-1" value="option1-1" checked>
+              <label class="form-check-label" for="radios1-1">
+                Answer 1-1
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-2" value="option1-2">
+              <label class="form-check-label" for="radios1-2">
+                Answer 1-2
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-3" value="option1-3">
+              <label class="form-check-label" for="radios1-3">
+                Answer 1-3
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-4" value="option1-4">
+              <label class="form-check-label" for="radios1-4">
+                Answer 1-4
+              </label>
+            </div>
+            <br>
+            <h5>Question 2</h5>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-1" value="option2-1" checked>
+              <label class="form-check-label" for="radios2-1">
+                Answer 2-1
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-2" value="option2-2">
+              <label class="form-check-label" for="radios2-2">
+                Answer 2-2
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-3" value="option2-3">
+              <label class="form-check-label" for="radios2-3">
+                Answer 2-3
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-4" value="option2-4">
+              <label class="form-check-label" for="radios2-4">
+                Answer 2-4
+              </label>
+            </div>
+            <br>
+            <h5>Question 3</h5>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-1" value="option3-1" checked>
+              <label class="form-check-label" for="radios3-1">
+                Answer 3-1
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-2" value="option3-2">
+              <label class="form-check-label" for="radios3-2">
+                Answer 3-2
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-3" value="option3-3">
+              <label class="form-check-label" for="radios3-3">
+                Answer 3-3
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-4" value="option3-4">
+              <label class="form-check-label" for="radios3-4">
+                Answer 3-4
+              </label>
+            </div>
+            <br>
+            <h5>Question 4</h5>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-1" value="option4-1" checked>
+              <label class="form-check-label" for="radios4-1">
+                Answer 4-1
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-2" value="option4-2">
+              <label class="form-check-label" for="radios4-2">
+                Answer 4-2
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-3" value="option4-3">
+              <label class="form-check-label" for="radios4-3">
+                Answer 4-3
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-4" value="option4-4">
+              <label class="form-check-label" for="radios4-4">
+                Answer 4-4
+              </label>
+            </div>
+            <br>
+            <h5>Question 5</h5>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-1" value="option5-1" checked>
+              <label class="form-check-label" for="radios5-1">
+                Answer 5-1
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-2" value="option5-2">
+              <label class="form-check-label" for="radios5-2">
+                Answer 5-2
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-3" value="option5-3">
+              <label class="form-check-label" for="radios5-3">
+                Answer 5-3
+              </label>
+            </div>
+            <div class="form-check">
+              <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-4" value="option5-4">
+              <label class="form-check-label" for="radios5-4">
+                Answer 5-4
+              </label>
+            </div>
+            <br>
+            <button type="submit">Submit to See Results</button>
+          </form>
+        </div>
+        <div class="col-md-4">
+          <div class="hidden" id="python">
+            <h3>Check out Python!</h3>
+            <p>General Info</p>
+            <img src="img/python-logo.png" class="img-fluid" style="width: 200px;" alt="Python 2-Snakes Logo">
+          </div>
+          <div class="hidden" id="javascript">
+            <h3>Check out Javascript!</h3>
+            <p>General Info</p>
+            <img src="img/JavaScript-logo.png" class="img-fluid" style="width: 200px;" alt="Javascript Community Created Logo">
+          </div>
+          <div class="hidden" id="cPlusPlus">
+            <h3>Check out C++!</h3>
+            <p>General Info</p>
+            <img src="img/cpp-logo.png" class="img-fluid" style="width: 200px;" alt="C++ Foundation Logo">
+          </div>
+          <div class="hidden" id="ruby">
+            <h3>Check out Ruby!</h3>
+            <p>General Info</p>
+            <img src="img/ruby-logo.png" class="img-fluid" style="width: 200px;" alt="Ruby Logo">
+          </div>
+        </div>
       </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-3" value="option1-3">
-        <label class="form-check-label" for="radios1-3">
-          Answer 1-3
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-4" value="option1-4">
-        <label class="form-check-label" for="radios1-4">
-          Answer 1-4
-        </label>
-      </div>
-      <br>
-      <h5>Question 2</h5>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-1" value="option2-1" checked>
-        <label class="form-check-label" for="radios2-1">
-          Answer 2-1
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-2" value="option2-2">
-        <label class="form-check-label" for="radios2-2">
-          Answer 2-2
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-3" value="option2-3">
-        <label class="form-check-label" for="radios2-3">
-          Answer 2-3
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-4" value="option2-4">
-        <label class="form-check-label" for="radios2-4">
-          Answer 2-4
-        </label>
-      </div>
-      <br>
-      <h5>Question 3</h5>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-1" value="option3-1" checked>
-        <label class="form-check-label" for="radios3-1">
-          Answer 3-1
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-2" value="option3-2">
-        <label class="form-check-label" for="radios3-2">
-          Answer 3-2
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-3" value="option3-3">
-        <label class="form-check-label" for="radios3-3">
-          Answer 3-3
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-4" value="option3-4">
-        <label class="form-check-label" for="radios3-4">
-          Answer 3-4
-        </label>
-      </div>
-      <br>
-      <h5>Question 4</h5>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-1" value="option4-1" checked>
-        <label class="form-check-label" for="radios4-1">
-          Answer 4-1
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-2" value="option4-2">
-        <label class="form-check-label" for="radios4-2">
-          Answer 4-2
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-3" value="option4-3">
-        <label class="form-check-label" for="radios4-3">
-          Answer 4-3
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-4" value="option4-4">
-        <label class="form-check-label" for="radios4-4">
-          Answer 4-4
-        </label>
-      </div>
-      <br>
-      <h5>Question 5</h5>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-1" value="option5-1" checked>
-        <label class="form-check-label" for="radios5-1">
-          Answer 5-1
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-2" value="option5-2">
-        <label class="form-check-label" for="radios5-2">
-          Answer 5-2
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-3" value="option5-3">
-        <label class="form-check-label" for="radios5-3">
-          Answer 5-3
-        </label>
-      </div>
-      <div class="form-check">
-        <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-4" value="option5-4">
-        <label class="form-check-label" for="radios5-4">
-          Answer 5-4
-        </label>
-      </div>
-      <br>
-      <button type="submit">Submit to See Results</button>
-    </form>
-    <div class="hidden" id="python">
-      <h3>Check out Python!</h3>
-      <p>General Info</p>
-      <!-- an Image -->
-    </div>
-    <div class="hidden" id="javascript">
-      <h3>Check out Javascript!</h3>
-      <p>General Info</p>
-      <!-- an Image -->
-    </div>
-    <div class="hidden" id="cPlusPlus">
-      <h3>Check out C++!</h3>
-      <p>General Info</p>
-      <!-- an Image -->
-    </div>
-    <div class="hidden" id="ruby">
-      <h3>Check out Ruby!</h3>
-      <p>General Info</p>
-      <!-- an Image -->
     </div>
   </body>
 </html>
