add css color/formatting

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="jumbotron">
+      <div class="jumbotron jumbotron-custom">
         <h1>Programming Language Suggester</h1>
         <p><em>This quick survey will help you decide on a programming language to learn based on your interests within the field.</em></p>
         <br>
@@ -152,24 +152,32 @@
         </div>
         <div class="col-md-4">
           <div class="hidden" id="python">
-            <h3>Check out Python!</h3>
-            <p>General Info</p>
-            <img src="img/python-logo.png" class="img-fluid" style="width: 200px;" alt="Python 2-Snakes Logo">
+            <div class="blue-theme">
+              <h3>Check out Python!</h3>
+              <p>General Info</p>
+              <img src="img/python-logo.png" class="img-fluid" style="width: 200px;" alt="Python 2-Snakes Logo">
+            </div>
           </div>
           <div class="hidden" id="javascript">
-            <h3>Check out Javascript!</h3>
-            <p>General Info</p>
-            <img src="img/JavaScript-logo.png" class="img-fluid" style="width: 200px;" alt="Javascript Community Created Logo">
+            <div class="blue-theme">
+              <h3>Check out Javascript!</h3>
+              <p>General Info</p>
+              <img src="img/JavaScript-logo.png" class="img-fluid" style="width: 200px;" alt="Javascript Community Created Logo">
+            </div>
           </div>
           <div class="hidden" id="cPlusPlus">
-            <h3>Check out C++!</h3>
-            <p>General Info</p>
-            <img src="img/cpp-logo.png" class="img-fluid" style="width: 200px;" alt="C++ Foundation Logo">
+            <div class="blue-theme">
+              <h3>Check out C++!</h3>
+              <p>General Info</p>
+              <img src="img/cpp-logo.png" class="img-fluid" style="width: 200px;" alt="C++ Foundation Logo">
+            </div>
           </div>
           <div class="hidden" id="ruby">
-            <h3>Check out Ruby!</h3>
-            <p>General Info</p>
-            <img src="img/ruby-logo.png" class="img-fluid" style="width: 200px;" alt="Ruby Logo">
+            <div class="blue-theme">
+              <h3>Check out Ruby!</h3>
+              <p>General Info</p>
+              <img src="img/ruby-logo.png" class="img-fluid" style="width: 200px;" alt="Ruby Logo">
+            </div>
           </div>
         </div>
       </div>
