add result lang descriptions & links

--- a/index.html
+++ b/index.html
@@ -154,29 +154,34 @@
           <div class="hidden" id="python">
             <div class="blue-theme">
               <h3>Check out Python!</h3>
-              <p>General Info</p>
               <img src="img/python-logo.png" class="img-fluid" style="width: 200px;" alt="Python 2-Snakes Logo">
+              <p>Python is an interpreted coding language for general purpose programming. It is constructed to provide for excellent code readability and implements a number of plain English keywords to allow new users a more intuitive experience</p>
+              <p>For more information about Python, please visit <a href="https://www.python.org/">the developers' website.</a> </p>
             </div>
           </div>
           <div class="hidden" id="javascript">
             <div class="blue-theme">
               <h3>Check out Javascript!</h3>
-              <p>General Info</p>
               <img src="img/JavaScript-logo.png" class="img-fluid" style="width: 200px;" alt="Javascript Community Created Logo">
+              <p>Javascript is one of the foundational languages of the Web! It is a high-level language that is often compiled "just-in-time" as the program is running. This language is a great choice for beginners because while it is more complex than other languages regarding use and syntax, the prevalence of Javascript across the internet will allow users no shortage of use cases to improve their understanding.</p>
+              <p>For more information about JavaScript, please visit <a href="https://www.w3schools.com/js/default.asp">this website</a> for a series of interactive tutorials.</p>
             </div>
           </div>
           <div class="hidden" id="cPlusPlus">
             <div class="blue-theme">
               <h3>Check out C++!</h3>
-              <p>General Info</p>
               <img src="img/cpp-logo.png" class="img-fluid" style="width: 200px;" alt="C++ Foundation Logo">
+              <p>C++ is a compiled general-purpose language initially released in 1985. Use of C++ is often found in game development due to the its efficiency. The language has evolved a lot during this time period but still remains an excellent way for beginners to start learning about core concepts such as memory allocation, program efficiency (such as big O notation), and the importance of syntax. C++ can often be difficult for newer programmers and you may require a lot of outside assistance as you are getting started.</p>
+              <p>For more information about C++, please visit <a href="https://www.w3schools.com/cpp/default.asp">this helpful tutorial page</a> to learn a bit about modern C++</p>
             </div>
           </div>
           <div class="hidden" id="ruby">
             <div class="blue-theme">
               <h3>Check out Ruby!</h3>
-              <p>General Info</p>
               <img src="img/ruby-logo.png" class="img-fluid" style="width: 200px;" alt="Ruby Logo">
+              <p>Ruby is a programming language fit for general purpose designed in 1995 by Yukihiro Matsumoto. The language is interpretive and designed with simplicity in mind. Ruby is a high level language using many plain English keywords and simple syntax to make learning intuitive for people with a some understanding of how languages work.</p>
+              <p>For more information about Ruby, please visit <a href="https://www.geeksforgeeks.org/ruby-tutorial/">this page</a> for a complete tutorial aimed at beginners.</p>
+
             </div>
           </div>
         </div>
