fix indentation on <label> tags

--- a/index.html
+++ b/index.html
@@ -21,135 +21,95 @@
             <h6>What sort of syntax are you comfortable with?</h6>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-1" value="option1-1" checked>
-              <label class="form-check-label" for="radios1-1">
-                I prefer easy to read syntax using a lot of plain English.
-              </label>
+              <label class="form-check-label" for="radios1-1">I prefer easy to read syntax using a lot of plain English.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-2" value="option1-2">
-              <label class="form-check-label" for="radios1-2">
-                I am comfortable with some complex syntax that iterates on simple principles.
-              </label>
+              <label class="form-check-label" for="radios1-2">I am comfortable with some complex syntax that iterates on simple principles.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-3" value="option1-3">
-              <label class="form-check-label" for="radios1-3">
-                I prefer to learn more complex syntax that gives me a deeper understanding of the interaction of code and machine.
-              </label>
+              <label class="form-check-label" for="radios1-3">I prefer to learn more complex syntax that gives me a deeper understanding of the interaction of code and machine.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion1" id="radios1-4" value="option1-4">
-              <label class="form-check-label" for="radios1-4">
-                I would like a language with simple syntax that may benefit from some pre-requisite knowledge.
-              </label>
+              <label class="form-check-label" for="radios1-4">I would like a language with simple syntax that may benefit from some pre-requisite knowledge.</label>
             </div>
             <br>
             <h5>Question 2</h5>
             <h6>What are your immediate goals with learning a language?</h6>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-1" value="option2-1" checked>
-              <label class="form-check-label" for="radios2-1">
-                I would like to be able to quickly understand how to make a basic program.
-              </label>
+              <label class="form-check-label" for="radios2-1">I would like to be able to quickly understand how to make a basic program.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-2" value="option2-2">
-              <label class="form-check-label" for="radios2-2">
-                I would prefer a language with a high amount of usablity and plenty of learning resources.
-              </label>
+              <label class="form-check-label" for="radios2-2">I would prefer a language with a high amount of usablity and plenty of learning resources.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-3" value="option2-3">
-              <label class="form-check-label" for="radios2-3">
-                I want to learn more about building efficient programs from scratch.
-              </label>
+              <label class="form-check-label" for="radios2-3">I want to learn more about building efficient programs from scratch.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion2" id="radios2-4" value="option2-4">
-              <label class="form-check-label" for="radios2-4">
-                I want to try a flexible with a lot of moddability.
-              </label>
+              <label class="form-check-label" for="radios2-4">I want to try a flexible with a lot of moddability.</label>
             </div>
             <br>
             <h5>Question 3</h5>
             <h6>What is more important to you: language speed or readability?</h6>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-1" value="option3-1" checked>
-              <label class="form-check-label" for="radios3-1">
-                Being able to read code easily and intuitively is extremely important.
-              </label>
+              <label class="form-check-label" for="radios3-1">Being able to read code easily and intuitively is extremely important.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-2" value="option3-2">
-              <label class="form-check-label" for="radios3-2">
-                I would like a language that I can follow methodically that doesn't sacrifice speed too heavily.
-              </label>
+              <label class="form-check-label" for="radios3-2">I would like a language that I can follow methodically that doesn't sacrifice speed too heavily.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-3" value="option3-3">
-              <label class="form-check-label" for="radios3-3">
-                I don't mind if a language isn't as easily read so long as I can make my programs fast.
-              </label>
+              <label class="form-check-label" for="radios3-3">I don't mind if a language isn't as easily read so long as I can make my programs fast.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion3" id="radios3-4" value="option3-4">
-              <label class="form-check-label" for="radios3-4">
-                I would like a language that can balance readability with efficiency. 
-              </label>
+              <label class="form-check-label" for="radios3-4">I would like a language that can balance readability with efficiency.</label>
             </div>
             <br>
             <h5>Question 4</h5>
             <h6>How would you like to implement your code?</h6>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-1" value="option4-1" checked>
-              <label class="form-check-label" for="radios4-1">
-                I'd prefer to use my code to build simple apps.
-              </label>
+              <label class="form-check-label" for="radios4-1">I'd prefer to use my code to build simple apps.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-2" value="option4-2">
-              <label class="form-check-label" for="radios4-2">
-                I would like to try building web-based applications.
-              </label>
+              <label class="form-check-label" for="radios4-2">I would like to try building web-based applications.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-3" value="option4-3">
-              <label class="form-check-label" for="radios4-3">
-                I would like to build general purpose programs with a varying amounts of features.
-              </label>
+              <label class="form-check-label" for="radios4-3">I would like to build general purpose programs with a varying amounts of features.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion4" id="radios4-4" value="option4-4">
-              <label class="form-check-label" for="radios4-4">
-                I would like to make web-based appications... but I'm different.
-              </label>
+              <label class="form-check-label" for="radios4-4">I would like to make web-based appications... but I'm different.</label>
             </div>
             <br>
             <h5>Question 5</h5>
             <h6>How do you feel about snakes?</h6>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-1" value="option5-1" checked>
-              <label class="form-check-label" for="radios5-1">
-                Love 'em!
-              </label>
+              <label class="form-check-label" for="radios5-1">Love 'em!</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-2" value="option5-2">
-              <label class="form-check-label" for="radios5-2">
-                I'd prefer less snakes and less nonsense honestly.
-              </label>
+              <label class="form-check-label" for="radios5-2">I'd prefer less snakes and less nonsense honestly.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-3" value="option5-3">
-              <label class="form-check-label" for="radios5-3">
-                I'd like the beautiful mosiac of a snake's scales. But a snake itself is too fluid a creature for mine eyes.
-              </label>
+              <label class="form-check-label" for="radios5-3">I'd like the beautiful mosiac of a snake's scales. But a snake itself is too fluid a creature for mine eyes.</label>
             </div>
             <div class="form-check">
               <input class="form-check-input" type="radio" name="radioQuestion5" id="radios5-4" value="option5-4">
-              <label class="form-check-label" for="radios5-4">
-                I find the user interface of snakes to be hostile and unwelcoming.
-              </label>
+              <label class="form-check-label" for="radios5-4">I find the user interface of snakes to be hostile and unwelcoming.</label>
             </div>
             <br>
             <button type="submit">Submit to See Results</button>
@@ -186,7 +146,6 @@
               <img src="img/ruby-logo.png" class="img-fluid" style="width: 200px;" alt="Ruby Logo">
               <p>Ruby is a programming language fit for general purpose designed in 1995 by Yukihiro Matsumoto. The language is interpretive and designed with simplicity in mind. Ruby is a high level language using many plain English keywords and simple syntax to make learning intuitive for people with a some understanding of how languages work.</p>
               <p>For more information about Ruby, please visit <a href="https://www.geeksforgeeks.org/ruby-tutorial/">this page</a> for a complete tutorial aimed at beginners.</p>
-
             </div>
           </div>
         </div>
