adjust button appearance

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <label class="form-check-label" for="radios5-4">I find the user interface of snakes to be hostile and unwelcoming.</label>
             </div>
             <br>
-            <button type="submit">Submit to See Results</button>
+            <button type="submit" class="btn btn-primary">Submit to See Results</button>
           </form>
         </div>
         <div class="col-md-4">
